# arasaka-nexus

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
backend/accounts/: admin.py  apps.py  auth_classes.py  auth_jwt.py  models.py  push.py  serializers.py  tests.py  turnstile.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_profile_birthdate_show_adult.py  0003_pushsubscription.py  0004_favorite_notify_on_new_chapter.py  0005_profile_digest.py  0006_pushsub_counters.py  0007_pushsub_click_count.py
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/employees/: admin.py  apps.py  auth_views.py  mangadex_client.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/employees/migrations/: 0001_initial.py  0002_chapterimage.py  0003_alter_chapter_options_manga_mangadex_id_and_more.py  0004_chapter_mangadex_id.py  0005_manga_cover_path.py  0006_manga_content_rating.py  0007_chapter_translated_language.py  0008_source_id.py  0009_chapter_published_at.py
backend/site_config/: admin.py  apps.py  models.py  urls.py  views.py
backend/site_config/migrations/: 0001_initial.py  0002_seed_legal_documents.py  0003_update_legal_documents_v2.py
backend/sources/: admin.py  apps.py  models.py  registry.py  search.py  tasks.py  tests.py  urls.py  views.py
backend/sources/base/: dto.py  health.py  http.py  source.py
backend/sources/migrations/: 0001_initial.py
(+97 files in other folders)
